# csci330_f25

./: .dockerignore  .gitignore  ASSIGNMENT_WORKFLOW.md  COURSE_INDEX.md  CPP_Ch1_lp.docx  DEVELOPMENT_SETUP.md  GETTING_STARTED.md  QUICK_START_PATH.md  README.md  STRUCTURE_OPTIMIZATION.md  STUDENT_GUIDE.md  SampleGitImplementation.md  chapter_01_complete.md  chapter_01_development_setup.md  chapter_01_problems.md  chapter_02_complete.md  chapter_02_problems_revised.md  chapter_02_workflow_tips.md  chapter_03_complete.md  chapter_03_problems.md  chapter_04_complete.md  chapter_04_problems.md  chapter_05_complete.md  chapter_05_problems_revised.md  chapter_06_complete.md  chapter_06_problems.md  chapter_07_complete.md  chapter_07_problems_revised.md  chapter_08_complete.md  chapter_08_problems_revised.md  chapter_09_complete.md  chapter_09_problems_revised.md  chapter_11_complete.md  chapter_12_complete.md  chapter_15_complete.md  cpp chapter map.docx  docker-compose.yml  docker_troubleshooting.md  extract_all_chapters.py  extract_chapter.py  (+1 more)
.devcontainer/: test  test.cpp
.github/: pull_request_template.md
assignment-templates/HW_01/: CMakeLists.txt
assignment-templates/HW_01/src/: CMakeLists.txt
assignment-templates/HW_01/tests/: test_main.cpp
assignments/: README.md
chapter_01_solutions/: problem_2_1_solution.cpp
chapter_02_solutions/: problem_2_1_solution.cpp  problem_2_2_solution.cpp  problem_3_1_solution.cpp  problem_3_2_solution.cpp
chapter_04_solutions/: README.md  problem_1_1_solution.cpp  problem_2_1_solution.cpp  problem_3_1_solution.cpp
(+591 files in other folders)
